--- a/src/assets/styles/Header/header.scss
+++ b/src/assets/styles/Header/header.scss
@@ -11,7 +11,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  @include bg-color(bg);
+  z-index: 4000;
   .address{
     display: flex;
     flex-direction: row;
