--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -17,4 +17,16 @@ $colors-dark: (
    el-input__inner_border_color:rgba($color: #1A2940, $alpha: 0.5),
    border-right-color:rgba($color: #fafafa, $alpha: 0.2),
    input_color:#EBEFF2,
+   btns_span:#1A2940,
+   el-slider__runway:#1A2940,
+  line_box:#0C192B,
+  list_nav_active:#0C192B,
+  info_num:#FFFFFF,
+  filter_imgs:#273342,
+  text1_first_child:#fff,
+  text1_last_child:#fff,
+  el-drawer__body:#152131,
+  link_text:#ffffff,
+  link_icon:#71819A,
+  control:#0C192B,
 );
