--- a/src/assets/styles/light.scss
+++ b/src/assets/styles/light.scss
@@ -16,5 +16,17 @@ $colors-light: (
    border-bottom-color:#EBEFF2,
    el-input__inner_border_color:#EBEFF2,
    border-right-color:rgba($color: #EBEFF2, $alpha: 1),
-   input_color:#141319
+   input_color:#141319,
+   btns_span:#EBEFF2,
+   el-slider__runway:#EBEFF2,
+   line_box:#F0F5FE,
+   list_nav_active:#EBEFF2,
+   info_num:#131415,
+   filter_imgs:#D4D9E0,
+   text1_first_child:#131415,
+   text1_last_child:#D4D9E0,
+   el-drawer__body:#ffffff,
+   link_text:#1E2144,
+   link_icon:#ddd,
+   control:#EBEFF2,
 );
