--- a/src/assets/styles/Trade/Trade.scss
+++ b/src/assets/styles/Trade/Trade.scss
@@ -22,6 +22,7 @@
       align-items: center;
       .assets{
         margin: 0 10px;
+        margin-left: 0px;
         font-size: 16px;
         font-weight: bold;
         @include text-color(assets);
