--- a/src/assets/styles/Trade/Trade.scss
+++ b/src/assets/styles/Trade/Trade.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  letter-spacing: 0.5px;
   .trade_view{
     width:calc( 100% - 40px);
     padding: 0 20px;
@@ -18,8 +19,9 @@
     .view_left{
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
+      width: 216px;
       .assets{
         margin: 0 10px;
         margin-left: 0px;
@@ -293,7 +295,7 @@
     }
   }
   .buy_FILDA{
-    width:335px;
+    width:calc(100% - 40px);
     height: 42px;
     background: #1B55D1;
     border-radius: 5px;
@@ -304,7 +306,7 @@
     color: #fff;
   }
   .sell_FILDA{
-    width:335px;
+    width:calc(100% - 40px);
     height: 42px;
     background: #DD4D40;
     border-radius: 5px;
@@ -315,7 +317,7 @@
     color: #fff;
   }
   .waring_tips{
-    width:335px;
+    width:calc(100% - 40px);
     height: 58px;
     background: rgba($color:#D46B3A, $alpha: 0.1);
     border-radius: 5px;
@@ -344,6 +346,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding-bottom: 50px;
     .list_nav{
       width: 100%;
       display: flex;
@@ -376,9 +379,11 @@
   top: -10px;
   width: 18px;
   height: 18px;
+  
 }
 .el-slider__button-wrapper{
   top: -18px;
+  left: 10px!important;
 }
 .el-slider__stop{
   height: 9px;
