--- a/src/assets/styles/ControlCenter/ControlCenter.scss
+++ b/src/assets/styles/ControlCenter/ControlCenter.scss
@@ -1,7 +1,7 @@
 @import '../base.scss';
 
 .center{
-  width: calc(100% - 40px);
+  width: 100%;
   height: calc(100% - 20px);
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@
     }
     i{
       @include text-color(link_icon);
-      font-size: 15px;
+      font-size: 20px;
       margin-left: 11px;
     }
     .welcomen_text{
@@ -85,8 +85,71 @@
         @include text-color(link_text);
         margin-left: 10px;
       }
+      .icon{
+        font-size: 20px;
+        @include text-color(link_icon);
+        margin-left: 10px;
+      }
+    }
+    .seting{
+      position: relative;
+      .seting_box{
+        position: absolute;
+        left: 0;
+        top: 30px;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        .item{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          
+          .title{
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 14px;
+          }
+          .lang{
+            width: 50%;
+            height: auto;
+            margin: 10px 0;
+            font-size: 13px;
+            @include text-color(link_text);
+            border-right: 3px solid #fff;
+            @include border-right-color(border-right-color);
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            span{
+              margin-left: 0;
+             
+            }
+            i{
+              font-size: 18px;
+              color: #77808E;
+              margin-left: 10px;
+              font-weight: bold;
+            }
+          }
+          .right{
+            border-right: none;
+            justify-content: flex-end;
+          }
+        }
+      }
     }
   }
+}
+body .actived{
+  color: #1B55D1 !important;
 }
 .el-drawer__wrapper{
   z-index: 4001!important;
