--- a/src/assets/styles/light.scss
+++ b/src/assets/styles/light.scss
@@ -1,26 +1,26 @@
 $colors-light: (
   bg:#ffffff,
   /*Header*/
-  address:#EBEFF2,
+  address:#DCDFE6,
   address_span:#77808E,
   /*Transaction*/
-  transaction_nav:#EBEFF2,
+  transaction_nav:#DCDFE6,
   transaction_nav_span:#71819A,
   transaction_nav_active:#0350DA,
    /*Trade*/
    assets:#131415,
    select_down:#ffffff,
-   select_down_border:#EBEFF2,
+   select_down_border:#DCDFE6,
    dropdown__item:#141319,
-   el-popper:#EBEFF2,
-   border-bottom-color:#EBEFF2,
-   el-input__inner_border_color:#EBEFF2,
-   border-right-color:rgba($color: #EBEFF2, $alpha: 1),
+   el-popper:#DCDFE6,
+   border-bottom-color:#DCDFE6,
+   el-input__inner_border_color:#DCDFE6,
+   border-right-color:rgba($color: #DCDFE6, $alpha: 1),
    input_color:#141319,
-   btns_span:#EBEFF2,
-   el-slider__runway:#EBEFF2,
+   btns_span:#DCDFE6,
+   el-slider__runway:#DCDFE6,
    line_box:#F0F5FE,
-   list_nav_active:#EBEFF2,
+   list_nav_active:#DCDFE6,
    info_num:#131415,
    filter_imgs:#D4D9E0,
    text1_first_child:#131415,
@@ -28,5 +28,9 @@ $colors-light: (
    el-drawer__body:#ffffff,
    link_text:#1E2144,
    link_icon:#ddd,
-   control:#EBEFF2,
+   control:#DCDFE6,
+   dialog_bg:#fff,
+   title-text: #0C192B,
+   el-input_inner: #fff,
+   input-group:#fff,
 );
