--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -33,4 +33,12 @@ $colors-dark: (
   title-text: #9ca3b0,
   el-input_inner: rgba(20,29,48,1),
   input-group:#1A2940,
+  line:#6D87A8,
+  text:#CFD3E9,
+  data_item2:#6D87A8,
+  red_data:#D04B64,
+  right_item1:#6D87A8,
+  right_item2:#CFD3E9,
+  line_bg:#0C192B,
+  footer:#212833,
 );
