--- a/src/assets/styles/light.scss
+++ b/src/assets/styles/light.scss
@@ -33,4 +33,12 @@ $colors-light: (
    title-text: #0C192B,
    el-input_inner: #fff,
    input-group:#fff,
+   line:#131415,
+   text:#131415,
+   data_item2:#131415,
+   red_data:#DD4F43,
+   right_item1:#71819A,
+   right_item2:#131415,
+   line_bg:#F5F7F9,
+   footer:#FEFFFE,
 );
