--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2480633 */
-  src: url('iconfont.woff2?t=1620122991188') format('woff2'),
-       url('iconfont.woff?t=1620122991188') format('woff'),
-       url('iconfont.ttf?t=1620122991188') format('truetype');
+  src: url('iconfont.woff2?t=1620365238088') format('woff2'),
+       url('iconfont.woff?t=1620365238088') format('woff'),
+       url('iconfont.ttf?t=1620365238088') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-more1:before {
+  content: "\e602";
+}
+
+.icon-left_2:before {
+  content: "\e64e";
 }
 
 .icon-right:before {
