--- a/src/assets/styles/Chart/ChartChild.scss
+++ b/src/assets/styles/Chart/ChartChild.scss
@@ -19,8 +19,8 @@
       padding: 7px 0;
     }
     .nav_active{
-      color: #1882D3;
-      border-bottom: 2px solid #1882D3;
+      color: #4380ff;
+      border-bottom: 2px solid #4380ff;
     }
     .addicon{
       // display: flex;
