--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -21,12 +21,12 @@ $colors-dark: (
    el-slider__runway:#1A2940,
   line_box:#0C192B,
   list_nav_active:#0C192B,
-  info_num:#FFFFFF,
+  info_num:#cdd6e7,
   filter_imgs:#273342,
-  text1_first_child:#fff,
-  text1_last_child:#fff,
+  text1_first_child:#cdd6e7,
+  text1_last_child:#cdd6e7,
   el-drawer__body:#152131,
-  link_text:#ffffff,
+  link_text:#cdd6e7,
   link_icon:#71819A,
   control:#0C192B,
   dialog_bg:#152131,
@@ -34,11 +34,11 @@ $colors-dark: (
   el-input_inner: rgba(20,29,48,1),
   input-group:#1A2940,
   line:#6D87A8,
-  text:#CFD3E9,
+  text:#cdd6e7,
   data_item2:#6D87A8,
   red_data:#D04B64,
   right_item1:#6D87A8,
-  right_item2:#CFD3E9,
+  right_item2:#cdd6e7,
   line_bg:#0C192B,
   footer:#212833,
 );
