--- a/src/assets/styles/Trade/Trade.scss
+++ b/src/assets/styles/Trade/Trade.scss
@@ -371,25 +371,29 @@
 .el-dialog, .el-pager li{
   @include bg-color(dialog_bg);
 }
+
 .el-dialog__title{
   @include text-color(link_text);
 }
 .el-slider__runway{
  @include bg-color(el-slider__runway);
-  height: 1px;
+  height: 3px;
 }
+
 .el-slider__button{
   background:url(~@/assets/images/slide_bg.png)no-repeat;
   border: none;
   border-radius: 0;
   top: -10px;
+  top: -30px!important;
+  left: 10px!important;
   width: 18px;
   height: 18px;
   
 }
+
 .el-slider__button-wrapper{
-  top: -18px;
-  left: 10px!important;
+  top: -17px;
 }
 .el-slider__stop{
   height: 9px;
@@ -397,11 +401,14 @@
   border-radius: 0; 
   @include bg-color(el-slider__runway);
   transform: translateX(-50%);
-  top: -4.5px;
+  top: -2.5px;
 }
 .el-slider__bar{
-  height: 1px;
+  height: 3px;
 }
+
+
+
 .select_down{
   @include bg-color(select_down);
   @include border(select_down_border);
