--- a/src/assets/styles/Chart/ChartChild.scss
+++ b/src/assets/styles/Chart/ChartChild.scss
@@ -1,4 +1,38 @@
 @import "../base.scss";
+.select_box{
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 189.67px);
+  top: 189.67px;
+  background: rgba(0,0,0,0.5);
+  z-index: 6000;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  .box{
+    width: calc(100% - 40px);
+    height: auto;
+    padding: 15px 20px;
+    @include bg-color(bg);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    span{
+      padding: 6px 30px;
+      @include bg-color(box_span);
+      border-radius: 5px;
+      font-size: 12px;
+      color: #6D87A8;
+    }
+    .active{
+      color: #1B55D1;
+      border: 1px solid #1B55D1;
+      border-radius: 5px;
+    }
+  }
+}
 .ChartChild{
   width: 100%;
   height: auto;
@@ -19,22 +53,25 @@
       padding: 7px 0;
     }
     .nav_active{
-      color: #4380ff;
+      color: #4380ff!important;
       border-bottom: 2px solid #4380ff;
     }
     .addicon{
-      // display: flex;
-      // flex-direction: row;
-      // justify-content: center;
-      // align-items: center;
       position: relative;
+      color: #6D87A8;
       i{
         margin-left: 5px;
         font-size: 30px;
-        color:#6D87A8 ;
+        color: #6D87A8;
         position: absolute;
         bottom: 7px;
         right: -10px;
+      }
+    }
+    .addicon_active{
+      @include text-color(text);
+      i{
+        @include text-color(text);
       }
     }
   }
