--- a/src/assets/styles/light.scss
+++ b/src/assets/styles/light.scss
@@ -1,7 +1,7 @@
 $colors-light: (
   bg:#ffffff,
   /*Header*/
-  address:#DCDFE6,
+  address:#EBEFF2,
   address_span:#77808E,
   /*Transaction*/
   transaction_nav:#DCDFE6,
