--- a/src/assets/styles/Header/header.scss
+++ b/src/assets/styles/Header/header.scss
@@ -18,9 +18,16 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    padding: 4px 8px;
+    padding: 5px 15px;
     @include bg-color(address);
     border-radius: 50px;
+    .div{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+    }
     span{
       @include text-color(address_span);
       margin-left: 5px;
