--- a/src/assets/styles/Quotation/Quotation.scss
+++ b/src/assets/styles/Quotation/Quotation.scss
@@ -139,9 +139,12 @@
           color: #71819A;
         }
         .right_div2{
-          padding: 4px 9px;
+          width: 70px;
+          height: 30px;
+          text-align: center;
+          line-height: 30px;
           color: #fff;
-          font-size: 16px;
+          font-size: 14px;
           border-radius: 5px;
           margin-left: 21px;
         }
