--- a/src/assets/styles/Trade/Trade.scss
+++ b/src/assets/styles/Trade/Trade.scss
@@ -175,7 +175,7 @@
       .shuliang_input{
         width: 100%;
       }
-      .filda{
+      .peer_token{
         position: absolute;
         right: 14px;
         top: 50%;
@@ -294,7 +294,7 @@
       }
     }
   }
-  .buy_FILDA{
+  .buy_peer_token{
     width:calc(100% - 40px);
     height: 42px;
     background: #1B55D1;
@@ -305,7 +305,7 @@
     font-size: 12px;
     color: #fff;
   }
-  .sell_FILDA{
+  .sell_peer_token{
     width:calc(100% - 40px);
     height: 42px;
     background: #DD4D40;
